[FLINK-38822][table] Support URL_DECODE and URL_DECODE_RECURSIVE functions
- Add URL_DECODE built-in function for decoding URL-encoded strings
- Add URL_DECODE_RECURSIVE built-in function with optional maxDepth parameter
  to recursively decode URL-encoded strings
- Add URL_ENCODE built-in function for encoding strings to URL-encoded format
- Register functions in BuiltInFunctionDefinitions with proper type strategies
- Implement scalar function classes: UrlDecodeFunction, UrlDecodeFunctionRecursive, UrlEncodeFunction
- Add Python API support in expression.py and BaseExpressions.java
- Add comprehensive unit tests and integration tests
- Add Chinese documentation for the new functions